# YZU-Math-Function-Visualization-Calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/core/: coord_sys.h  expr_parser.h  fitting.h  function.h  numerical.h
include/render/: render2d.h  render3d.h  view.h
include/ui/: input.h  widgets.h
include/utils/: common.h  list.h
src/: main.c
src/core/: coord_sys.c  expr_parser.c  fitting.c  numerical.c
src/render/: render2d.c  render3d.c  view.c
src/ui/: input.c  widgets.c
src/utils/: list.c
